--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
   <body>
     <div class="frame__container">
       <!--<img src="#" alt="b2_base" />-->
-      <a href="/b/b1.html" class="button1">
+      <a href="b1.html" class="button1">
         <span>to b1</span>  
         <!--<img src="#" alt="btn1" class="btn_img"/>-->
       </a>
-      <a href="/b/b2.html" class="button2">
+      <a href="b2.html" class="button2">
         <span>to b2</span>
         <!--<img src="#" alt="btn2" class="btn_img"/>-->
       </a>
