--- a/b1.html
+++ b/b1.html
@@ -8,7 +8,7 @@
       content="upgrade-insecure-requests"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>C1</title>
+    <title>B1</title>
     <style>
       @import "../styles/reset.css";
       .frame__container {
@@ -25,34 +25,28 @@
       }
       .button1{
         position: absolute;
-        background-color: white;
-        /*width: 20%;*/
-        top: 97%;
-        left:0;
-        box-shadow: 0 0 1rem blue;
+        width: 2.5%;
+        top: 27.6%;
+        left: 48.4%;
+        box-shadow: 0 0 1rem red;
       }
       .button2{
         position: absolute;
-        background-color: white;
-        /*width: 15.8%;*/
-        top: 97.7%;
-        left:0;
-        box-shadow: 0 0 1rem blue;
+        width: 2.5%;
+        top: 27.6%;
+        left: 40.9%;
+        box-shadow: 0 0 1rem red;
       }
-      /*
-      .btn_img{
-          opacity: 0;
-      }*/
     </style>
   </head>
   <body>
     <div class="frame__container">
-      <img src="c1_base.png" alt="b2_base" />
-      <a href="../c/c1.html" class="button1">
-          <img src="c1_button01.png" alt="btn1" class="btn_img"/>
+      <img src="b/b1_base.png" alt="b2_base" />
+      <a href="c1.html" class="button1">
+          <img src="b/b1_button01.png" alt="btn1" class="btn_img"/>
       </a>
-      <a href="../c/c2.html" class="button2">
-          <img src="c1_button02.png" alt="btn2" class="btn_img"/>
+      <a href="c2.html" class="button2">
+          <img src="b/b1_button02.png" alt="btn2" class="btn_img"/>
       </a>
     </div>
   </body>
