--- a/b2.html
+++ b/b2.html
@@ -8,7 +8,7 @@
       content="upgrade-insecure-requests"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>B1</title>
+    <title>B2</title>
     <style>
       @import "../styles/reset.css";
       .frame__container {
@@ -25,28 +25,27 @@
       }
       .button1{
         position: absolute;
-        width: 2.5%;
-        top: 27.6%;
-        left: 48.4%;
-        box-shadow: 0 0 1rem red;
+        width: 6.8%;
+        top: 4.8%;
+        opacity: 0.3;
+        box-shadow: 0 0 1rem #333;
       }
       .button2{
         position: absolute;
-        width: 2.5%;
-        top: 27.6%;
-        left: 40.9%;
-        box-shadow: 0 0 1rem red;
+        width: 4.5%;
+        top: 9.9%;
+        box-shadow: 0 0 1rem white;
       }
     </style>
   </head>
   <body>
     <div class="frame__container">
-      <img src="b1_base.png" alt="b2_base" />
-      <a href="../c/c1.html" class="button1">
-          <img src="b1_button01.png" alt="btn1" class="btn_img"/>
+      <img src="b/b2_base.png" alt="b2_base" />
+      <a href="c1.html" class="button1">
+          <img src="b/b2_button01.png" alt="btn1" class="btn_img"/>
       </a>
-      <a href="../c/c2.html" class="button2">
-          <img src="b1_button02.png" alt="btn2" class="btn_img"/>
+      <a href="c2.html" class="button2">
+          <img src="b/b2_button02_2.png" alt="btn2" class="btn_img"/>
       </a>
     </div>
   </body>
