--- a/c1.html
+++ b/c1.html
@@ -8,7 +8,7 @@
       content="upgrade-insecure-requests"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>B2</title>
+    <title>C1</title>
     <style>
       @import "../styles/reset.css";
       .frame__container {
@@ -25,27 +25,34 @@
       }
       .button1{
         position: absolute;
-        width: 6.8%;
-        top: 4.8%;
-        opacity: 0.3;
-        box-shadow: 0 0 1rem #333;
+        background-color: white;
+        /*width: 20%;*/
+        top: 97%;
+        left:0;
+        box-shadow: 0 0 1rem blue;
       }
       .button2{
         position: absolute;
-        width: 4.5%;
-        top: 9.9%;
-        box-shadow: 0 0 1rem white;
+        background-color: white;
+        /*width: 15.8%;*/
+        top: 97.7%;
+        left:0;
+        box-shadow: 0 0 1rem blue;
       }
+      /*
+      .btn_img{
+          opacity: 0;
+      }*/
     </style>
   </head>
   <body>
     <div class="frame__container">
-      <img src="b2_base.png" alt="b2_base" />
-      <a href="../c/c1.html" class="button1">
-          <img src="b2_button01.png" alt="btn1" class="btn_img"/>
+      <img src="c/c1_base.png" alt="b2_base" />
+      <a href="c1.html" class="button1">
+          <img src="c/c1_button01.png" alt="btn1" class="btn_img"/>
       </a>
-      <a href="../c/c2.html" class="button2">
-          <img src="b2_button02_2.png" alt="btn2" class="btn_img"/>
+      <a href="c2.html" class="button2">
+          <img src="c/c1_button02.png" alt="btn2" class="btn_img"/>
       </a>
     </div>
   </body>
