--- a/c2.html
+++ b/c2.html
@@ -16,7 +16,7 @@
         display: flex;
       }
       .frame__container {
-        width: auto;
+        width: 100vw;
         height: auto;
         display: flex;
         justify-content: center;
@@ -26,7 +26,7 @@
       }
       .frame__container img {
         max-width: 100%;
-        transform: scale(1.5);
+        transform: scale(3);
       }
       .button1{
         position: absolute;
@@ -57,12 +57,12 @@
   </head>
   <body>
     <div class="frame__container">
-      <img src="c2_base.gif" alt="b2_base" />
-      <a href="../c/c1.html" class="button1">
-          <img src="c2_button_01.png" alt="btn1" class="btn_img"/>
+      <img src="c/c2_base.gif" alt="b2_base" />
+      <a href="c1.html" class="button1">
+          <img src="c/c2_button_01.png" alt="btn1" class="btn_img"/>
       </a>
-      <a href="../c/c2.html" class="button2">
-          <img src="c2_button_02.png" alt="btn2" class="btn_img"/>
+      <a href="c2.html" class="button2">
+          <img src="c/c2_button_02.png" alt="btn2" class="btn_img"/>
       </a>
     </div>
   </body>
